# nrf54lm20-dk

./: LICENSE  README.md
KWS/: .gitignore  NOTES.md  README.md
KWS/firmware/: Cargo.toml  build.rs  memory.x
KWS/firmware/csrc/: glue.c
KWS/firmware/src/: libm_shims.rs  main.rs  mfcc.rs  pdm.rs
KWS/firmware/targets/: nRF54LM20B.yaml
KWS/training/: convert.py  features.py  pixi.toml  prepare.py  train.py
KWS/training/examples/: gen_sine_model.py  sine.tflite
PDM-MIC/: .gitignore  Cargo.toml  NOTES.md  README.md  build.rs  memory.x
PDM-MIC/.cargo/: config.toml
PDM-MIC/host/: Cargo.toml
PDM-MIC/host/.cargo/: config.toml
PDM-MIC/host/src/: main.rs
PDM-MIC/src/: main.rs  pdm.rs
npu/: .gitignore  Cargo.toml  NOTES.md  README.md  build.rs  memory.x  wrapper.h
npu/.cargo/: config.toml
npu/src/: bindings.rs  main.rs  platform.rs
npu/tools/: compile-model.sh
